--- a/index.html
+++ b/index.html
@@ -4,41 +4,49 @@
 <head>
   <style>
     body {
+      margin: 0;
+      /* Remove default margin */
+      overflow: hidden;
+      /* Hide scrollbars */
+    }
+
+    .background-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: 100% 100%;
+      background-size: cover;
+      background-position: center;
+      border: 5px solid black;
+      /* Add border to contain the image */
     }
   </style>
 </head>
 
 <body>
+  <div class="background-container"></div>
   <script>
-    // Initialize the index to 1 (1.jpg)
     let currentIndex = 1;
-    const maxIndex = 6; // Total number of images
+    const maxIndex = 6;
 
-    // Function to set the background image
     function setBackgroundImage() {
-      document.body.style.backgroundImage = `url('${currentIndex}.jpg')`;
+      const container = document.querySelector('.background-container');
+      container.style.backgroundImage = `url('${currentIndex}.jpg')`;
     }
 
-    // Initial background image
     setBackgroundImage();
 
-    // Event listener for keydown events
-    document.addEventListener('keydown', function(event) {
+    document.addEventListener('keydown', function (event) {
       if (event.key === 'ArrowRight') {
-        // Move to the next image
         currentIndex = (currentIndex % maxIndex) + 1;
       } else if (event.key === 'ArrowLeft') {
-        // Move to the previous image
         currentIndex = (currentIndex - 2 + maxIndex) % maxIndex + 1;
       } else {
-        // Ignore other keys
         return;
       }
 
-      // Set the new background image
       setBackgroundImage();
     });
   </script>
